--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,25 +1,46 @@
-.card img {
-    width: 30px;
-    border: 1px solid;
-    border-radius: 50%;
-    margin-left: 2px;
-    margin-top: 2px;
+.card-img-top {
+  width: 50px;
+  border: 1px solid;
+  border-radius: 50%;
+  margin-left: 2px;
+  margin-top: 2px;
 }
 
-.card{
-    border: 1px solid black;
+.card {
+  border: 1px solid black;
+  height: auto;
 }
 
-.recruitBox{
-    width: 50%;
-    height: 100px;
-    border: 1px solid green;
+.recruitBox {
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-between;
 }
-.recruitBox img{
-    width: 100%;
+.imgSrc {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-bottom: auto;
+  border-radius: 50%;
 }
 
-.rateNote{
-    font-size: xx-small;
+.btn {
+  width: 50%;
+}
 
+.card-text {
+  text-align: center;
+  border: 2px solid rgb(128, 128, 128);
+  width: 50%;
+}
+.card-title {
+  text-align: center;
+  width: 50%;
+}
+.rateNote {
+  font-size: xx-small;
+  text-align: center;
 }
