--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,7 +1,7 @@
 .card-img-top {
   width: 50px;
   border: 1px solid;
-  border-radius: 50%;
+  border-radius: 2em;
   margin-left: 2px;
   margin-top: 2px;
 }
@@ -29,16 +29,18 @@
 
 .btn {
   width: 50%;
+  border-radius: 2em;
 }
 
 .card-text {
   text-align: center;
   border: 2px solid rgb(128, 128, 128);
   width: 50%;
+  border-radius: 2em;
 }
 .card-title {
   text-align: center;
-  width: 50%;
+  width: 30%;
 }
 .rateNote {
   font-size: xx-small;
